--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/node_modules
-/docs/.vitepress/dist
+node_modules
+docs/.vitepress/dist
+docs/.vitepress/cache
 .idea
 .gitignore
-docs/.vitepress/cache/deps/_metadata.json
+
